# FocusTimer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig.defaults
.github/workflows/: release-firmware.yml
components/aw32001/: CMakeLists.txt  aw32001.c
components/aw96103/: aw96103.c
components/battery/: CMakeLists.txt  battery.c
components/ble/: CMakeLists.txt  ble.c
components/imu/: imu.c
components/lvgl_indev/: CMakeLists.txt  lvgl_indev.c
components/lvgl_user/: lvgl_user.c
components/max98357/: max98357.c
components/nvs_storage/: CMakeLists.txt  nvs_storage.c
components/sleep/: CMakeLists.txt  sleep.c
components/sleep/include/: sleep.h
components/sys_init/: CMakeLists.txt
components/ui/: CMakeLists.txt  actions.c  actions.h  cet6_vocabulary.c  cet6_vocabulary.h  data_sync_screen_calls.h  main_screen_calls.c  main_screen_calls.h  mp3_screen_calls.c  mp3_screen_calls.h  pomodoro_screen_calls.c  power_setting_screen_calls.c  power_setting_screen_calls.h  screens.c  screens.h  setting_screen_calls.c  setting_screen_calls.h  styles.c  styles.h  ui_font_ipa_20.c  ui_font_siyuanheiti_20.c  vocabulary_screen_calls.c  vocabulary_screen_calls.h
docs/: audio_partition.md  flash_analysis.md  memory_analysis.md  memory_flash_analysis.md
main/: CMakeLists.txt  main.c
main/ui/: actions.c  actions.h  data_sync_screen_calls.c  main_screen_calls.c  main_screen_calls.h  mp3_screen_calls.c  pomodoro_screen_calls.c  power_setting_screen_calls.c  power_setting_screen_calls.h  screens.c  screens.h  styles.c  styles.h
tools/: MP3toWAV.html
vocabulary/: README.md  analyze_phonetic.py  analyze_phonetic_v2.py  convert_to_embedded.py  ui_font_ipa_20.h
(+10 files in other folders)
